--- a/reference.bib
+++ b/reference.bib
@@ -28,12 +28,14 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICML,
   year      = {2018}
 }
+
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -72,6 +74,7 @@
   year    = {2020}
 }
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -97,13 +100,13 @@
   number  = {12}
 }
 
-
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -128,7 +131,6 @@
   year      = {2016}
 }
 
-
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
@@ -143,6 +145,7 @@
   booktitle = {SODA},
   year      = {2007}
 }
+
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -163,7 +166,6 @@
   journal = SIG
 }
 
-
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
   author    = {Atzmon, Matan and Lipman, Yaron},
@@ -178,6 +180,7 @@
   booktitle = ICLR,
   year      = {2021}
 }
+
 
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
@@ -205,7 +208,6 @@
   number  = {1},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -239,7 +241,6 @@
   year      = {2021}
 }
 
-
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
   title   = {Fast and Deep Deformation Approximations},
@@ -248,6 +249,7 @@
   number  = {4},
   journal = SIG
 }
+
 
 @article{Bailey2020,
   title   = {Fast and deep facial deformations},
@@ -276,12 +278,14 @@
   year    = {2018}
 }
 
+
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
@@ -301,6 +305,7 @@
   number  = {8}
 }
 
+
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
   title   = {A survey of surface reconstruction from point clouds},
@@ -309,7 +314,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @article{Besl1992,
   author  = {Besl, Paul J and McKay, Neil D},
@@ -320,6 +324,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
@@ -327,13 +332,13 @@
   year      = {2014}
 }
 
+
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -344,7 +349,6 @@
   number  = {3}
 }
 
-
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
   title   = {Integer-grid maps for reliable quad meshing},
@@ -353,6 +357,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
@@ -371,6 +376,7 @@
   volume  = {34},
   number  = {5}
 }
+
 
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
@@ -394,6 +400,7 @@
   author = {Mario Botsch and Leif Kobbelt and Mark Pauly and Pierre Alliez and Bruno L\'{e}vy}
 }
 
+
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
   title   = {Deep learning for robust normal estimation in unstructured point clouds},
@@ -402,6 +409,7 @@
   volume  = {35},
   number  = {5}
 }
+
 
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
@@ -437,7 +445,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
@@ -495,6 +502,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
@@ -515,7 +523,6 @@
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
@@ -549,7 +556,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
@@ -572,6 +578,7 @@
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -599,6 +606,14 @@
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
+}
+
+
+@inproceedings{Chiang2019,
+  title     = {A unified point-based framework for {3D} segmentation},
+  author    = {Chiang, Hung-Yueh and Lin, Yen-Liang and Liu, Yueh-Cheng and Hsu, Winston H},
+  booktitle = threeDV,
+  year      = {2019}
 }
 
 @inproceedings{Chibane2020,
@@ -726,7 +741,6 @@
   year    = {1989}
 }
 
-
 @inproceedings{Dai2017,
   author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
@@ -745,6 +759,13 @@
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
   title     = {{ScanComplete}: Large-Scale Scene Completion and Semantic Segmentation for {3D} Scans},
   booktitle = CVPR,
+  year      = {2018}
+}
+
+@inproceedings{Dai2018a,
+  title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
+  author    = {Dai, Angela and Nie{\ss}ner, Matthias},
+  booktitle = ECCV,
   year      = {2018}
 }
 
@@ -772,7 +793,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
@@ -796,13 +816,13 @@
   number  = {1}
 }
 
-
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
   booktitle = ICCV,
   title     = {Unsupervised visual representation learning by context prediction},
   year      = {2015}
 }
+
 
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
@@ -812,13 +832,13 @@
   publiser  = {IEEE}
 }
 
+
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
   author    = {Dosovitskiy, Alexey and Springenberg, Jost Tobias and Riedmiller, Martin and Brox, Thomas},
   booktitle = NeurIPS,
   year      = {2014}
 }
-
 
 @inproceedings{Dosovitskiy2021,
   title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
@@ -827,13 +847,13 @@
   year      = {2021}
 }
 
-
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
   journal = SA,
   year    = {2018}
 }
+
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -862,6 +882,7 @@
   number  = {5}
 }
 
+
 @article{Engel2021,
   title   = {Point transformer},
   author  = {Engel, Nico and Belagiannis, Vasileios and Dietmayer, Klaus},
@@ -869,6 +890,7 @@
   volume  = {9},
   year    = {2021}
 }
+
 
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
@@ -1044,7 +1066,6 @@
   publisher = {MIT Press}
 }
 
-
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
@@ -1052,21 +1073,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{Graham2015,
   author    = {Ben Graham},
   title     = {Sparse {3D} convolutional neural networks},
   booktitle = BMVC,
   year      = {2015}
 }
-
-@article{Graham2017,
-  author  = {Graham, Benjamin and van der Maaten, Laurens},
-  title   = {Submanifold Sparse Convolutional Networks},
-  journal = {arXiv preprint arXiv:1706.01307},
-  year    = {2017}
-}
-
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1089,12 +1101,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
   title     = {{AtlasNet}: A {Papier-M\^{a}ch\'{e}} approach to learning {3D} surface generation},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @article{Guennebaud2007,
   author  = {Guennebaud, Ga\"{e}l and Gross, Markus},
@@ -1104,6 +1118,7 @@
   volume  = {26},
   number  = {3}
 }
+
 
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
@@ -1196,14 +1211,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Han2017,
   author    = {Xiaoguang Han and Zhen Li and Haibin Huang and Evangelos Kalogerakis and Yizhou Yu},
   title     = {High-resolution shape completion using deep neural networks for global structure and local geometry inference},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
@@ -1239,6 +1252,7 @@
   volume  = {38}
 }
 
+
 @article{Harary2014,
   author  = {Harary, Gur and Tal, Ayellet and Grinspun, Eitan},
   title   = {Context-based coherent surface completion},
@@ -1247,6 +1261,7 @@
   volume  = {33},
   number  = {1}
 }
+
 
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
@@ -1273,14 +1288,12 @@
   number  = {12}
 }
 
-
 @inproceedings{Hazarika2020,
   title     = {Misa: Modality-invariant and-specific representations for multimodal sentiment analysis},
   author    = {Hazarika, Devamanyu and Zimmermann, Roger and Poria, Soujanya},
   booktitle = {ACM International Conference on Multimedia},
   year      = {2020}
 }
-
 
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
@@ -1312,12 +1325,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{He2020,
   author    = {Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross Girshick},
   booktitle = CVPR,
   title     = {Momentum contrast for unsupervised visual representation learning},
   year      = {2020}
 }
+
 
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
@@ -1372,6 +1387,13 @@
   author  = {Hu, Qingyong and Yang, Bo and Xie, Linhai and Rosa, Stefano and Guo, Yulan and Wang, Zhihua and Trigoni, Niki and Markham, Andrew},
   journal = CVPR,
   year    = {2020}
+}
+
+@inproceedings{Hu2020,
+  title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
+  author    = {Hu, Zeyu and Zhen, Mingmin and Bai, Xuyang and Fu, Hongbo and Tai, Chiew-lan},
+  booktitle = ECCV,
+  year      = {2020}
 }
 
 @article{Huang2006,
@@ -1464,7 +1486,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Jiang2019,
   author    = {Jiang, Jianwen and Bao, Di and Chen, Ziqiang and Zhao, Xibin and Gao, Yue},
   booktitle = AAAI,
@@ -1494,6 +1515,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Johnson1999,
   author  = {Johnson, Andrew E. and Hebert, Martial},
@@ -1853,6 +1875,13 @@
   year      = {2020}
 }
 
+@inproceedings{Lei2020a,
+  title     = {{SegGCN}: Efficient {3D} point cloud segmentation with fuzzy spherical kernel},
+  author    = {Lei, Huan and Akhtar, Naveed and Mian, Ajmal},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @article{Leon2008,
   title   = {Volume octree with an implicitly defined dual grid},
   author  = {Le{\'o}n, Alejandro and Torres, Juan Carlos and Velasco, Francisco},
@@ -1888,7 +1917,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
   title     = {{FPNN}: field probing neural networks for {3D} data},
@@ -1912,6 +1940,7 @@
   booktitle = NeurIPS,
   year      = {2018}
 }
+
 
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
@@ -1967,7 +1996,6 @@
   year      = {2021}
 }
 
-
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
   title   = {Non-Iterative approach for global mesh optimization},
@@ -1991,13 +2019,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
   author    = {Liu, Yu and Song, Guanglu and Shao, Jing and Jin, Xiao and Wang, Xiaogang},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Liu2019,
   author    = {Yongcheng Liu and Bin Fan and Shiming Xiang and Chunhong Pan},
@@ -2028,7 +2056,6 @@
   year    = {2020}
 }
 
-
 @inproceedings{Liu2020b,
   title     = {A Closer Look at Local Aggregation Operators in Point Cloud Analysis},
   author    = {Liu, Ze and Hu, Han and Cao, Yue and Zhang, Zheng and Tong, Xin},
@@ -2050,6 +2077,7 @@
   booksubtitle = ICCV,
   year         = {2021}
 }
+
 
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
@@ -2086,6 +2114,7 @@
   year      = {2017},
   publisher = {Nelson Education}
 }
+
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2319,6 +2348,13 @@
   number  = {7}
 }
 
+@inproceedings{Narita2019,
+  title     = {{PanopticFusion}: Online volumetric semantic mapping at the level of stuff and things},
+  author    = {Narita, Gaku and Seno, Takashi and Ishikawa, Tomoya and Kaji, Yohsuke},
+  booktitle = IROS,
+  year      = {2019}
+}
+
 @inproceedings{Nekrasov2021,
   title     = {{Mix3D}: Out-of-Context Data Augmentation for 3D Scenes},
   author    = {Nekrasov, Alexey and Schult, Jonas and Litany, Or and Leibe, Bastian and Engelmann, Francis},
@@ -2480,7 +2516,6 @@
   year    = {2003}
 }
 
-
 @inproceedings{Pfaff2020,
   title     = {Learning Mesh-Based Simulation with Graph Networks},
   author    = {Pfaff, Tobias and Fortunato, Meire and Sanchez-Gonzalez, Alvaro and Battaglia, Peter},
@@ -2495,13 +2530,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Qi2016,
   author    = {Charles R. Qi and Hao Su and Matthias Nie{\ss}ner and Angela Dai and Mengyuan Yan and Leonidas J. Guibas},
   title     = {Volumetric and multi-view {CNNs} for object classification on {3D} data},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @inproceedings{Qi2017,
   author    = {Qi, Charles R. and Yi, Li and Su, Hao and Guibas, Leonidas J.},
@@ -2510,7 +2545,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Qi2017a,
   author    = {Charles R. Qi and Hao Su and Kaichun Mo and Leonidas J. Guibas},
   title     = {{PointNet}: Deep learning on point sets for {3D} classification and segmentation},
@@ -2518,12 +2552,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Qi2019,
   author    = {Qi, Charles R. and Litany, Or and He, Kaiming and Guibas, Leonidas J},
   title     = {Deep {Hough} Voting for {3D} Object Detection in Point Clouds},
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Qin2016,
   title   = {Fast and exact discrete geodesic computation based on triangle-oriented wavefront propagation},
@@ -2680,7 +2716,6 @@
   issn    = {0377-0427}
 }
 
-
 @article{Roveri2018,
   author  = {Roveri, Riccardo and \"{O}ztireli, A. Cengiz and Pandele, Ioana and Gross, Markus},
   title   = {{PointProNets}: Consolidation of Point Clouds with Convolutional Neural Networks},
@@ -2697,13 +2732,13 @@
   year    = {2021}
 }
 
+
 @inproceedings{Sabour2017,
   title     = {Dynamic routing between capsules},
   author    = {Sabour, Sara and Frosst, Nicholas and Hinton, Geoffrey E},
   booktitle = NeurIPS,
   year      = {2017}
 }
-
 
 @inproceedings{Sanchez2020,
   title     = {Learning to simulate complex physics with graph networks},
@@ -2719,6 +2754,7 @@
   year    = {2015},
   volume  = {13}
 }
+
 
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
@@ -2764,7 +2800,6 @@
   year      = {2016}
 }
 
-
 @article{Sethian1999,
   title   = {Fast marching methods},
   author  = {Sethian, James A.},
@@ -2783,13 +2818,13 @@
   number  = {6}
 }
 
+
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
   journal = TVCG,
   year    = {2018}
 }
-
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
@@ -2807,6 +2842,7 @@
   volume  = {89},
   year    = {2010}
 }
+
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -2865,7 +2901,6 @@
   number  = {3}
 }
 
-
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -2875,7 +2910,6 @@
   number  = {6}
 }
 
-
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2884,6 +2918,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
@@ -2906,6 +2941,7 @@
   journal = {arXiv preprint arXiv:1901.04544},
   year    = {2019}
 }
+
 
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
@@ -2945,7 +2981,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
   title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
@@ -2953,13 +2988,13 @@
   year      = {2017}
 }
 
-
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
   journal = {Journal of computational physics},
   year    = {2018}
 }
+
 
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
@@ -2982,6 +3017,7 @@
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
+
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -3035,7 +3071,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -3043,13 +3078,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -3059,6 +3094,7 @@
   volume  = {28},
   number  = {5}
 }
+
 
 @article{Sun2007,
   author  = {Xianfang Sun and Rosin, P.~L. and Martin, R.~R. and Langbein, F.~C.},
@@ -3120,7 +3156,6 @@
   number  = {6}
 }
 
-
 @article{Surazhsky2005,
   title   = {Fast exact and approximate geodesics on meshes},
   author  = {Surazhsky, Vitaly and Surazhsky, Tatiana and Kirsanov, Danil and Gortler, Steven J and Hoppe, Hugues},
@@ -3129,7 +3164,6 @@
   number  = {3},
   year    = {2005}
 }
-
 
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
@@ -3140,12 +3174,14 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
   year      = {2021},
   booktitle = CVPR
 }
+
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3184,14 +3220,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
   author    = {Tang, Jiapeng and Lei, Jiabao and Xu, Dan and Ma, Feiying and Jia, Kui and Zhang, Lei},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -3201,6 +3235,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -3217,7 +3252,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Octree generating networks: efficient convolutional architectures for high-resolution {3D} outputs},
@@ -3225,12 +3259,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
   title     = {A signal processing approach to fair surface design},
   booktitle = {SIGGRAPH},
   year      = {1995}
 }
+
 
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
@@ -3246,7 +3282,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
@@ -3260,6 +3295,7 @@
   booktitle = ICCV,
   year      = {1998}
 }
+
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3275,14 +3311,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
   title     = {Sparsity invariant {CNNs}},
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
@@ -3291,12 +3325,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
   author    = {Ummenhofer, Benjamin and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
@@ -3523,7 +3559,6 @@
   number  = {4}
 }
 
-
 @article{Wang2022a,
   title   = {{PVT} v2: Improved baselines with pyramid vision transformer},
   author  = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
@@ -3533,13 +3568,13 @@
   year    = {2022}
 }
 
-
 @misc{Warehouse2018,
   author = {3D Warehouse},
   title  = {{3D Warehouse}},
   year   = {2018},
   url    = {https://3dwarehouse.sketchup.com/?hl=en}
 }
+
 
 @article{Wei2015,
   author  = {Mingqiang Wei and Jinze Yu and Wai-Man Pang and Jun Wang and Jing Qin and Ligang Liu and Pheng-Ann Heng},
@@ -3549,6 +3584,7 @@
   volume  = {21},
   number  = {1}
 }
+
 
 @inproceedings{Wei2016,
   author    = {Linyu Wei and Qixing Huang and Duygu Ceylan and Etienne Vouga and Hao Li},
@@ -3610,7 +3646,6 @@
   year      = {2017}
 }
 
-
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
   title   = {Constructing {3D CSG} models from {3D} raw point clouds},
@@ -3626,6 +3661,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Wu2018b,
   author    = {Wu, Jiajun and Zhang, Chengkai and Zhang, Xiuming and Zhang, Zhoutong and Freeman, William T and Tenenbaum, Joshua B},
@@ -3659,14 +3695,12 @@
   year    = {2020}
 }
 
-
 @article{Wu2021,
   title   = {{CvT}: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
   journal = ICCV,
   year    = {2021}
 }
-
 
 @inproceedings{Wu2022,
   title   = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
@@ -3675,12 +3709,14 @@
   year    = {2022}
 }
 
+
 @article{Xia2021,
   title   = {{GeodesicEmbedding (GE)}: a high-dimensional embedding approach for fast geodesic distance queries},
   author  = {Xia, Qianwei and Zhang, Juyong and Fang, Zheng and Li, Jin and Zhang, Mingyue and Deng, Bailin and He, Ying},
   journal = TVCG,
   year    = {2021}
 }
+
 
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
@@ -3751,7 +3787,6 @@
   year      = {2015}
 }
 
-
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -3760,7 +3795,6 @@
   volume  = {36},
   number  = {1}
 }
-
 
 @article{Xu2015b,
   title   = {Fast wavefront propagation {(FWP)} for computing exact geodesic distances on meshes},
@@ -3771,12 +3805,14 @@
   year    = {2015}
 }
 
+
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
@@ -3792,7 +3828,6 @@
   year      = {2002}
 }
 
-
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3801,13 +3836,13 @@
   issn      = {1530-1052}
 }
 
-
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   booktitle = {Geom. Model. and Proc.},
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
   year      = {2006}
 }
+
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
@@ -3816,6 +3851,7 @@
   year      = {2016}
 }
 
+
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
@@ -3823,6 +3859,12 @@
   year    = {2020}
 }
 
+@inproceedings{Yan2020a,
+  title     = {{PointASNL}: Robust point clouds processing using nonlocal neural networks with adaptive sampling},
+  author    = {Yan, Xu and Zheng, Chaoda and Li, Zhen and Wang, Sheng and Cui, Shuguang},
+  booktitle = CVPR,
+  year      = {2020}
+}
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3832,6 +3874,7 @@
   number  = {11},
   year    = {2015}
 }
+
 
 @inproceedings{Yang2017,
   author    = {Bo Yang and Hongkai Wen and Sen Wang and Ronald Clark and Andrew Markham and Niki Trigoni},
@@ -3877,7 +3920,6 @@
   year         = {2017}
 }
 
-
 @article{Yi2017a,
   author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
   title   = {Learning hierarchical shape segmentation and labeling from online repositories},
@@ -3905,6 +3947,7 @@
   number  = {4}
 }
 
+
 @article{Ying2013,
   title   = {Saddle vertex graph ({SVG}) a novel solution to the discrete geodesic problem},
   author  = {Ying, Xiang and Wang, Xiaoning and He, Ying},
@@ -3923,7 +3966,6 @@
   year    = {2014}
 }
 
-
 @inproceedings{You2018,
   author    = {You, Haoxuan and Feng, Yifan and Ji, Rongrong and Gao, Yue},
   booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
@@ -3940,6 +3982,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
@@ -3969,13 +4012,13 @@
   year      = {2022}
 }
 
-
 @inproceedings{Yun2019,
   title     = {{CutMix}: Regularization Strategy to Train Strong Classifiers with Localizable Features},
   author    = {Yun, Sangdoo and Han, Dongyoon and Oh, Seong Joon and Chun, Sanghyuk and Choe, Junsuk and Yoo, Youngjoon},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Zaharescu2009,
   author    = {Zaharescu, A. and Boyer, E. and Varanasi, K. and Horaud, R.},
@@ -3984,13 +4027,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
   title     = {Visualizing and understanding convolutional networks},
   booktitle = ECCV,
   year      = {2014}
 }
+
 
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
@@ -4007,7 +4050,6 @@
   volume  = {29},
   number  = {6}
 }
-
 
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
@@ -4026,6 +4068,7 @@
   year      = {2014}
 }
 
+
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
   title   = {Variational mesh denoising using total variation and piecewise constant function space},
@@ -4035,7 +4078,6 @@
   number  = {7}
 }
 
-
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -4044,6 +4086,7 @@
   volume  = {34},
   issue   = {7}
 }
+
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -4078,6 +4121,13 @@
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
+}
+
+@inproceedings{Zhang2020,
+  title     = {Deep {FusionNet} for point cloud semantic segmentation},
+  author    = {Zhang, Feihu and Fang, Jin and Wah, Benjamin and Torr, Philip},
+  booktitle = ECCV,
+  year      = {2020}
 }
 
 @inproceedings{Zhang2021,
